[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
anchor-client = { version = "0.29.0", features = ["async"] }
anyhow = "1.0.93"
raydium-amm-v3 = {git = "https://github.com/raydium-io/raydium-clmm.git", rev = "17582bf74ea6a19cb87655197604544b1858747c"}
shellexpand = "3.1.0"
solana-sdk = ">=1.14, <1.17"
# solana-rpc-client = { version = "1.16.0" }
spl-associated-token-account = { version = "2.2.0", features = ["no-entrypoint"]}
spl-memo = "4.0.0"
spl-token = { version = "4.0.0", features=["no-entrypoint"] }
spl-token-2022 = { version = "0.9.0", features = ["no-entrypoint"]}
tokio = { version = "1.41.1", features = ["macros"] }
